syntax = "proto3";

package maru;
option go_package = "service/myService";

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service ImageService {
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {};
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;

  //  Optional filter
  GetVendorsOfVenuesRequestFilters filters = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message GetVendorsOfVenuesRequestFilters {
  bool status = 1;
}

message UploadImageRequest {
  oneof data {
    string name = 1;
    bytes chunk_data = 3;
  };
}

message UploadImageResponse {
  string id = 1;
  uint32 size = 3;
}